# bispectrosa

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: theory.md
examples/: animate_bispectrum.py  animate_bispectrum_video.py  intro.ipynb
src/bispectrosa/: __init__.py  bispectrum.py  display.py  feature.py  filters.py
tests/: test_api.py  test_display.py  test_import_guard.py  test_mel_conventions.py  test_physics.py  test_regression.py
tests/fixtures/: README.md  research_ref.npz
